--- a/src/features/cart/cart-coupon/cart-coupon.module.scss
+++ b/src/features/cart/cart-coupon/cart-coupon.module.scss
@@ -5,6 +5,14 @@
   padding: 20px;
   border: 1px solid var(--gray-100);
   border-radius: 8px;
+
+  @media (max-width: 600px) {
+    flex-direction: column;
+
+    .input {
+      width: 100%;
+    }
+  }
 }
 
 .input {
