--- a/src/features/cart/cart-list/cart-list.module.scss
+++ b/src/features/cart/cart-list/cart-list.module.scss
@@ -58,20 +58,16 @@
   display: inline-flex;
   align-items: center;
   gap: 12px;
-
-  @media (max-width: 800px) {
-    flex-direction: column;
-    align-items: flex-start;
-    padding-bottom: 12px;
-  }
 }
 
 .image {
-  width: 100px;
-  height: 100px;
-  min-width: 100px;
+  --image-size: 100px;
+
+  width: var(--image-size);
+  height: var(--image-size);
+  min-width: var(--image-size);
+  max-height: var(--image-size);
   overflow: hidden;
-  max-height: 100px;
   position: relative;
 
   image {
@@ -101,4 +97,23 @@
 .backToShop {
   margin-top: 16px;
   margin-bottom: 16px;
+}
+
+@media (max-width: 800px) {
+  .product {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 12px;
+  }
+
+  .image {
+    --image-size: 50px;
+  }
+
+  .table {
+    th:nth-child(2),
+    td:nth-child(2) {
+      display: none;
+    }
+  }
 }
